# FAIRlead-model-extraction

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile-API  Dockerfile-CLI  README.md  generate-api-docker.bat  generate-cli-docker.bat  generate-python-api-config.yaml  generate-python-api-ignore  generate-python-api.bat  generate-python-model-3_1.bat  generate-python-model-config-3_1.yaml  generate-python-model-config.yaml  generate-python-model.bat
.github/workflows/: build.yaml
custom-openapi-template/python-fastapi-external-model/: api.mustache  base_api.mustache  main.mustache  model.mustache  models__init__.mustache  package__init__.mustache  pyproject_toml.mustache
custom-openapi-template/python-model-only/: package__init__.mustache  pyproject_toml.mustache
simpler-api/: .openapi-generator-ignore  README.md  docker-compose.yaml  openapi.yaml  pyproject.toml  setup.cfg
simpler-api/.openapi-generator/: FILES
simpler-api/src/simpler_api/: __init__.py  main.py  security_api.py
simpler-api/src/simpler_api/apis/: entity_api.py  entity_api_base.py  format_api.py  format_api_base.py  schema_api.py  schema_api_base.py
simpler-api/src/simpler_api/impl/: entity_api.py  format_api.py  plugins.py  response.py  schema_api.py  schema_urls.py  storage.py
simpler-api/src/simpler_api/models/: attribute.py  attribute_modifier.py  cardinality.py  entity.py  entity_key.py  entity_link.py  entity_modifier.py  format.py  key.py  model_schema.py  relation.py  relation_modifier.py
simpler-api/tests/: conftest.py  test_entity_api.py  test_format_api.py  test_schema_api.py
simpler-cli/: README.md  pyproject.toml
simpler-cli/src/: simpler_cli.py
simpler-core/: README.md  pyproject.toml
simpler-core/src/simpler_core/: cardinality.py  dot.py  owl2jsonschema.py  plugin.py  rdf.py  schema.py  settings.py  storage.py
simpler-model/: .openapi-generator-ignore  README.md  docker-compose.yaml  openapi.yaml  pyproject.toml
simpler-model-3_1/: pyproject.toml
simpler-model/.openapi-generator/: FILES
simpler-model/src/simpler_model/: __init__.py
simpler-model/src/simpler_model/models/: attribute.py  attribute_modifier.py  cardinality.py  entity.py  entity_key.py  entity_link.py  entity_modifier.py  format.py  key.py  model_schema.py  relation.py  relation_modifier.py
simpler-plugin-api/: README.md  pyproject.toml
simpler-plugin-api/src/: simpler_plugin_api.py
simpler-plugin-json/: pyproject.toml
simpler-plugin-json/src/: simpler_plugin_json.py
simpler-plugin-rdf/: README.md  pyproject.toml
simpler-plugin-rdf/src/: owl2_util.py  simpler_plugin_rdf.py
simpler-plugin-sql/: README.md  pyproject.toml
simpler-plugin-sql/src/: simpler_plugin_sql.py
simpler-plugin-tabular/: README.md  pyproject.toml
simpler-plugin-tabular/src/: simpler_plugin_tabular.py
simpler-plugin-xml/: README.md  pyproject.toml
simpler-plugin-xml/src/: simpler_plugin_xml.py
spec/0/: ero.ttl  openapi.yaml  openapi3_1.yaml
spec/0/json-schema/: Attribute.json  AttributeModifier.json  Cardinality.json  Entity.json  EntityModifier.json  Modifier.json  Relation.json  RelationModifier.json
