[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true

[project]
name = "simpler_api"
dynamic = ["version"]
description = "This is a Schema extraction API based on the OpenAPI 3.0 specification.  You can find out more about Swagger at [https://swagger.io](https://swagger.io). "
readme = "README.md"
keywords = ["OpenAPI", "Schema API - OpenAPI 3.0"]
license = {file = "LICENSE.md"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7"
]

dependencies = [
  "typing-extensions~=4.8.0",
  "pydantic~=2.6.4",
  "fastapi[all]",
  "pydot",
  "uvicorn",
  "simpler_core==0.1.0"
]

[tool.setuptools.dynamic]
version = {attr = "simpler_api.SPECIFICATION_VERSION"}
